build_debug_11.txt

> Configure project :
Fabric Loom: 1.15.4
"Lock for cache='C:\Users\frand\.gradle\caches\fabric-loom', project=':'" is currently held by pid '30468'.
Run with --info or --debug to show arguments, may reveal sensitive info
- pid: 30468
- command: C:\Program Files\Eclipse Adoptium\jdk-21.0.9.10-hotspot\bin\java.exe
- started at: 2026-02-21T21:56:48.050Z
- user: FRAN\frand
- parent:
	- pid: 1840
	- command: C:\Users\frand\.antigravity\extensions\redhat.java-1.52.0-win32-x64\jre\21.0.9-win32-x86_64\bin\java.exe
	- started at: 2026-02-21T20:24:25.178Z
	- user: FRAN\frand
	- parent:
		- pid: 1676
		- command: C:\Users\frand\AppData\Local\Programs\Antigravity\Antigravity.exe
		- started at: 2026-02-21T20:24:17.357Z
		- user: FRAN\frand
		- parent:
			- title: 'bomboaddons-1.21.10 - Antigravity - Settings'
			- pid: 22208
			- command: C:\Users\frand\AppData\Local\Programs\Antigravity\Antigravity.exe
			- started at: 2026-02-21T20:24:12.523Z
			- user: FRAN\frand
			- parent:
				- pid: 10500
				- command: C:\Windows\explorer.exe
				- started at: 2026-02-21T16:42:43.550Z
				- user: FRAN\frand
Waiting for lock to be released...

> Task :compileJava UP-TO-DATE
> Task :processResources UP-TO-DATE
> Task :classes UP-TO-DATE

> Task :compileClientJava
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:16: error: cannot find symbol
import net.fabricmc.fabric.api.client.rendering.v1.WorldRenderContext;
                                                  ^
  symbol:   class WorldRenderContext
  location: package net.fabricmc.fabric.api.client.rendering.v1
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:17: error: cannot find symbol
import net.fabricmc.fabric.api.client.rendering.v1.WorldRenderEvents;
                                                  ^
  symbol:   class WorldRenderEvents
  location: package net.fabricmc.fabric.api.client.rendering.v1
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:28: error: cannot find symbol
    private static void onRender(WorldRenderContext context) {
                                 ^
  symbol:   class WorldRenderContext
  location: class PestRenderer
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:25: error: package WorldRenderEvents does not exist
        WorldRenderEvents.AFTER_ENTITIES.register(PestRenderer::onRender);
                         ^
Note: C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors

> Task :compileClientJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:

[Incubating] Problems report is available at: file:///C:/Users/frand/Documents/bomboaddons-1.21.10/build/reports/problems/problems-report.html
Execution failed for task ':compileClientJava'.
> Compilation failed; see the compiler output below.
  Note: C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java uses unchecked or unsafe operations.
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:16: error: cannot find symbol
  import net.fabricmc.fabric.api.client.rendering.v1.WorldRenderContext;
                                                    ^
    symbol:   class WorldRenderContext
    location: package net.fabricmc.fabric.api.client.rendering.v1
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:17: error: cannot find symbol
  import net.fabricmc.fabric.api.client.rendering.v1.WorldRenderEvents;
                                                    ^
    symbol:   class WorldRenderEvents
    location: package net.fabricmc.fabric.api.client.rendering.v1
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:28: error: cannot find symbol
      private static void onRender(WorldRenderContext context) {
                                   ^
    symbol:   class WorldRenderContext
    location: class PestRenderer
  Note: Recompile with -Xlint:unchecked for details.
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:25: error: package WorldRenderEvents does not exist
          WorldRenderEvents.AFTER_ENTITIES.register(PestRenderer::onRender);
                           ^
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.3.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 9s
3 actionable tasks: 1 executed, 2 up-to-date
